2005-12-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/error_counters.cpp, itpp/comm/error_counters.h:
	Changed `long' to `int', since they have the same size on most
	32-bit platforms. Fixed bugs in `if' statements (lack of casting
	to `short').

	* NEWS: Updated to include recent changes
	* configure.ac: Updated version number and fixed header files'
	checks 
	* itpp/base/binfile.cpp, itpp/base/timing.cpp,
	itpp/comm/modulator.cpp: Updated include statements due to
	`configure.ac' changes
	* doc/local/verification.doc: Updated according to the latest test

	* tests/turbo_test.cpp: Minor fix and cosmetic changes

	* TODO: Updated to include recent changes

	* itpp/protocol/packet.h, itpp/protocol/selective_repeat.h:
	Removed unnecessary include preprocessor commands 

	* itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h,
	itpp/base/scalfunc.cpp, itpp/base/scalfunc.h: Added
	`round_to_zero()' function, which rounds arguments below a certain
	threshold to zero. This function is useful for test programs.
	* tests/Makefile.am: Reverted to revision 1.7
	* tests/*.cpp, tests/*.ref: Updated test programs to make them
	robust for precision differences on various platforms.

2005-12-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: Added support for redesigned tests, which
	should be more robust to negligible precison errors, ie.
	plus/minus zero. 
	* tests/pulse_shape_test2.cpp, tests/pulse_shape_test2.ref:
	Redesined tests of pulse shaping classes added.

	* itpp/comm/error_counters.cpp, itpp/comm/error_counters.h: Error
	and correct bit/packet counters are now of `double' type instead
	of `long'.

	* configure.ac, itpp/base/lapack.h: Fixed bug [1385960]. Although
	the MKL library was detected properly, the IT++ compilation failed
	on files that use `itpp/base/lapack.h'. The patch attached to the
	bug-report fixes this problem.

2005-12-19  Adam Piatyszek  <ediap@users.sourceforge.net>
