@@ -11,38 +11,68 @@
 /* Define if F77 and FC dummy `main' functions are identical. */
 /* #undef FC_DUMMY_MAIN_EQ_F77 */
 
+/* Define to 1 if you have the <algorithm> header file. */
+#define HAVE_ALGORITHM 1
+
+/* Define to 1 if you have the <cassert> header file. */
+#define HAVE_CASSERT 1
+
 /* Define if you have CBLAS library. */
-#define HAVE_CBLAS 1
+/* #undef HAVE_CBLAS */
+
+/* Define to 1 if you have the <cmath> header file. */
+#define HAVE_CMATH 1
+
+/* Define to 1 if you have the <complex> header file. */
+#define HAVE_COMPLEX 1
+
+/* Define to 1 if you have the <cstring> header file. */
+#define HAVE_CSTRING 1
+
+/* Define to 1 if you have the <deque> header file. */
+#define HAVE_DEQUE 1
 
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #define HAVE_DLFCN_H 1
 
 /* Define if you have FFTW library. */
-#define HAVE_FFTW 1
+/* #undef HAVE_FFTW */
 
-/* Define to 1 if you have the <float.h> header file. */
-#define HAVE_FLOAT_H 1
+/* Define to 1 if you have the <fstream> header file. */
+#define HAVE_FSTREAM 1
 
 /* Define to 1 if you have the <inttypes.h> header file. */
 #define HAVE_INTTYPES_H 1
 
 /* Define if you have LAPACK library. */
-#define HAVE_LAPACK 1
+/* #undef HAVE_LAPACK */
 
 /* Define to 1 if you have the `m' library (-lm). */
 #define HAVE_LIBM 1
+
+/* Define to 1 if you have the <limits> header file. */
+#define HAVE_LIMITS 1
+
+/* Define to 1 if you have the <list> header file. */
+#define HAVE_LIST 1
 
 /* Define to 1 if you have the <memory.h> header file. */
 #define HAVE_MEMORY_H 1
 
 /* Define if you have MKL library. */
-#define HAVE_MKL
+#define HAVE_MKL 1
+
+/* Define to 1 if you have the <queue> header file. */
+#define HAVE_QUEUE 1
 
 /* Define to 1 if you have the <stdint.h> header file. */
 #define HAVE_STDINT_H 1
 
 /* Define to 1 if you have the <stdlib.h> header file. */
 #define HAVE_STDLIB_H 1
+
+/* Define to 1 if you have the <string> header file. */
+#define HAVE_STRING 1
 
 /* Define to 1 if you have the <strings.h> header file. */
 #define HAVE_STRINGS_H 1
@@ -54,7 +84,7 @@
 #define HAVE_SYS_STAT_H 1
 
 /* Define to 1 if you have the <sys/time.h> header file. */
-#define HAVE_SYS_TIME_H 1
+/* #undef HAVE_SYS_TIME_H */
 
 /* Define to 1 if you have the <sys/types.h> header file. */
 #define HAVE_SYS_TYPES_H 1
@@ -83,8 +113,14 @@
 /* Define to the version of this package. */
 #define PACKAGE_VERSION "3.9.0"
 
+/* Define to 1 if the `S_IS*' macros in <sys/stat.h> do not work properly. */
+/* #undef STAT_MACROS_BROKEN */
+
 /* Define to 1 if you have the ANSI C header files. */
 #define STDC_HEADERS 1
+
+/* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
+/* #undef TIME_WITH_SYS_TIME */
 
 /* Version number of package */
 #define VERSION "3.9.0"
